src/test/ui/issue-46036.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/issue-46036.rs:19:24
   |
LL |     let foo = Foo { x: &a }; //~ ERROR E0597
   |                        ^^ borrowed value does not live long enough
LL |     loop { }
LL | }
   | - `a` dropped here while still borrowed
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
